--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
                 <td>
                     <b class="get-query">GET Запрос</b>: Возвращает массив заказов [<i>orders</i>], 
                         общее колличество заказов <i>count</i> и колличество страниц <i>pages</i>. <br>
+                        Требуеться токен. <br>
                     <b>Параметры:</b> _sort, _order, _page, _limit
                 </td>
               </tr>
