--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,14 @@
                 </td>
               </tr>
 
+               <tr class="body-td">
+                <td class="body-cell">http://192.168.2.10:3131/api/service/restart</td>
+                <td>
+                    <b class="get-query">GET Запрос</b>: Сброс hash, обновление систем.<br>
+                    <b>Параметры:</b> Нет
+                </td>
+              </tr>
+
               <tr class="body-td">
                 <td class="body-cell">http://192.168.2.10:3131/api/extra-data/get</td>
                 <td>
